--- a/src/main/webapp/statics/css/image_carousel/component.css
+++ b/src/main/webapp/statics/css/image_carousel/component.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'fontawesome';
-	src:url('../fonts/fontawesome/fontawesome.eot?-ulzwqn');
-	src:url('../fonts/fontawesome/fontawesome.eot?#iefix-ulzwqn') format('embedded-opentype'),
-		url('../fonts/fontawesome/fontawesome.woff?-ulzwqn') format('woff'),
-		url('../fonts/fontawesome/fontawesome.ttf?-ulzwqn') format('truetype'),
-		url('../fonts/fontawesome/fontawesome.svg?-ulzwqn#fontawesome') format('svg');
+	src:url('../../fonts/fontawesome/fontawesome.eot?-ulzwqn');
+	src:url('../../fonts/fontawesome/fontawesome.eot?#iefix-ulzwqn') format('embedded-opentype'),
+		url('../../fonts/fontawesome/fontawesome.woff?-ulzwqn') format('woff'),
+		url('../../fonts/fontawesome/fontawesome.ttf?-ulzwqn') format('truetype'),
+		url('../../fonts/fontawesome/fontawesome.svg?-ulzwqn#fontawesome') format('svg');
 	font-weight: normal;
 	font-style: normal;
 } /* Made with http://icomoon.io/app */
